# wobble_jax

./: .gitignore  .readthedocs.yml  README.md  Untitled.ipynb  config.pypirc  dataset.py  environment.yml  hatp20nb.ipynb  hatp20profile.py  hatp20profile.py.lprof  jabbleexample.ipynb  lin_model_vel_fitting12.py  loss.py  losstestnb.ipynb  main.py  model.py  modeln256_l0_r200_mI16f.pt  modeln256_l0_r200_mI32f.pt  modeln256_l0_r200_mI4f.pt  modeln256_l0_r200_mI8f.pt  modeln64_lNone_rNone_mI16f.pt  modeln7000_l0_r6000_mI16f.pt  modeln7000_l0_r6000_mI4f.pt  out128mx.txt  out256mx.txt  out256r16l20mx.txt  out32r165l17mx.txt  out512r12l20mx.txt  out64mx.txt  out64r16l17mx.txt  out7000l0r6000.txt  outn1024r100l1700.txt  outn2048r100l3300.txt  outn64_l1900_r2000.txt  outn7000r1l6000.txt  plot_model_script.py  plottings.py  plotvelocityscript.py  pyproject.toml  setup.cfg  (+6 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  hatp20nb-checkpoint.ipynb  losstestnb-checkpoint.ipynb  plotruntimes-checkpoint.ipynb  wobble_data_test-checkpoint.ipynb
docs/source/: conf.py  index.rst  solomodel.nblink
jabble/: __init__.py  cardinalspline.py  dataset.py  irwinhall.py  loss.py  model.py  physics.py  plotting.py  plottings.py  quickplay.py
notebooks/: 01-solomodel.ipynb  01-testdata.ipynb  02-51peg.ipynb  02-51peg.py  02-telluricsmodel.ipynb  02.1-51peg-plot.ipynb  03-gascellmodel.ipynb  03-gilese436.ipynb  04-18sco.ipynb  04-HD4307.ipynb  04-convolvecomposite.ipynb  05-HD4307.ipynb  05-simulateddata.ipynb  06-CARMENES.ipynb  06-plot-HD4307.ipynb  07-apogee-cframes.ipynb  07.1-plot-apogee-cframe.ipynb  10-traincycle.ipynb  101-parametertesting.ipynb  11-plottraincycles.ipynb  12-hyperparameters.ipynb  20-crossvalidation.ipynb  21-crossvalidationsimulated.ipynb  30-crossvalidation.ipynb  30-straightflyingstar.ipynb  31-singlestraightflying.ipynb  32-multistraightflying-Copy1.ipynb  32-multistraightflying.ipynb  33-multistraightflyingtellurics.ipynb  34-toomanystraightflying.ipynb  41-realdata.ipynb  42-realstupiddatalinear.ipynb  43-realstupiddatasinusoidal.ipynb  44-realdatasplinetest-Copy1.ipynb  44-realdatasplinetest.ipynb  44-realdatasplinetest.py  44-realdatasplinetest.py~  44-testsplinemethods-Copy1.ipynb  45-realdatatellurics.ipynb  46-51peg.ipynb  (+18 more)
notebooks/old/: 10-traincycle.ipynb  11-plottraincycles.ipynb  12-hyperparameters.ipynb  13-plothyperparameters.ipynb  30-crossvalidation.ipynb  98-datasettesting.ipynb  99-jaxtesting.ipynb
outnb/: Untitled2.ipynb  Untitled7.ipynb  jabbleexample2.0.ipynb  simulation_notebook.ipynb  training_bool_sim.ipynb
scripts/: Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  astropytimetestnb.ipynb  cleaning.py  datanb2.ipynb  hatp20profile.py  lossfixingtest.ipynb  plot_model_script.py  plotruntimes.ipynb  plotvelocityscript.py  readInFitsNB.ipynb  training.py
