[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[project]
name = "jabble"
dynamic = ["version","description"]
dependencies = [
  "numpy",
  "astropy>=3.2",
  "scipy",
  "jax",
]
requires-python = ">=3.8"
authors = [
  {name = "Matthew Daunt", email = "mdd423@nyu.edu"}
]
maintainers = [
  {name = "Matthew Daunt", email = "mdd423@nyu.edu"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["statistics", "jax", "astrophysics", "RV"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools-git-versioning]
enabled = true

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mdd423/wobble_jax.git"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["jabble"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)