[metadata]
name = simulacra
description = Spectrograph simulator
long_description = file: README.md
author = Matthew Daunt
author_email = mdd423@nyu.edu
url = https://github.com/mdd423/WobbleSim.git
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=3.2
    scipy
    jax
    matplotlib

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc
