[metadata]
name = jabble
description = Stellar data-driven models for EPRVs with Jax
long_description = file: README.md
author = Matthew Daunt
author_email = mdd423@nyu.edu
url = https://github.com/mdd423/wobble_jax.git
license = BSD 3-Clause License

[options]
setup_requires = setuptools_scm
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=3.2
    scipy
    jax
    matplotlib

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc
